mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/abstract_contract_inheriting_from_non_abstract.sol
contract A layout at 0x1234 {}
abstract contract C is A { }
// ----
// TypeError 8894: (54-55): Cannot inherit from a contract with a custom storage layout.
